# dcaf-public

./: .gitignore  README.md  pyproject.toml
dcaf/: __init__.py  orchestrator.py
dcaf/ablation/: __init__.py  baselines.py  classification.py  confirmation.py  counting.py  individual.py  interaction_strategies.py  methods.py  multi_phase.py  orphans.py  refinement.py  results.py  superadditivity.py  triples.py  validation.py
dcaf/arch/: __init__.py  model_loading.py  transformer.py
dcaf/candidates/: __init__.py  activation_filter.py  candidate_set.py  geometry_filter.py  ranking.py  weight_filter.py
dcaf/circuit/: __init__.py  classification.py  component_result.py  edges.py  graph.py  identifier.py  known_circuits.py  pathway.py  results.py  steering.py
dcaf/cli/: __init__.py  analyze.py  cli.py  common.py  discover.py  train.py
dcaf/confidence/: __init__.py  signals.py  thresholds.py  triangulation.py
dcaf/core/: __init__.py  config.py  defaults.py  signals.py  structures.py  topology.py
dcaf/data/: __init__.py  adversarial.py  converters.py  hh_rlhf.py  neutral.py  pair_loader.py  prompt_core.py  prompt_legacy.py  prompt_loader.py  safe_rlhf.py  safety_prompts.py  test_banks.py  utils.py
dcaf/diagnostics/: __init__.py  alignment.py  cross_run.py  curvature.py
dcaf/discovery/: __init__.py  activation.py  (+5 more)
demos/: ioi_discovery.py  test_torch.py
docs/: dcaf.bib  dcaf_paper.bbl  dcaf_paper.tex  related_work.md  roadmap.md  spec.bbl  spec.tex
tests/: conftest.py  test_cli.py  test_e2e_tiny.py  test_gpu_e2e.py  test_ioi_demo.py  test_orchestrator.py
(+122 files in other folders)
